--- a/style.css
+++ b/style.css
@@ -104,3 +104,16 @@ main > section#tutorials:hover {
         grid-template-columns: auto 600px auto;
     }
 }
+
+::-webkit-scrollbar {
+    width: 10px;
+}
+
+::-webkit-scrollbar-thumb {
+    background-color: gray;
+    border-radius: 10px;
+}
+
+::-webkit-scrollbar-thumb:hover {
+    background-color: rgb(180, 179, 179);
+}
