--- a/final-project/website/style.css
+++ b/final-project/website/style.css
@@ -15,7 +15,7 @@ body {
 
 nav {
     grid-area: top;
-    background: lightblue;
+    border: 1px black solid;
     display: flex;
     justify-content: space-between;
     align-items: center;
@@ -25,21 +25,26 @@ nav a, #search {
     padding-left: 20px;
     padding-right: 20px;
     display: inline-block;
-    text-decoration: none;    
+    text-decoration: none;
+    color: black;
 }
 
 #not-logo {
     align-items: center;
 }
 
+nav a {
+    border: 1px solid rgb(1, 1, 1, 0);
+}
+
 nav a:hover {
-    background-color: lightgoldenrodyellow;
+    border: 1px solid rgb(0,0,0,1);
     border-radius: 8px;
 }
 
-#chart {
+#location-info {
     grid-area: bottom;
-    background: pink;
+    border: black 1px solid;
 }
 
 nav>div {
@@ -49,11 +54,19 @@ nav>div {
 #logo {
     font-size: 35px;
     font-weight: bold;
-    font-family: Merriweather;
     text-decoration: none;
     color: black;
+    border: 1px solid rgb(0,0,0,0)
 }
 
 #logo:hover {
-    background: initial;
+    border: 1px solid rgb(0,0,0,1);
+}
+
+#store-card {
+    border: 1px black solid;
+}
+
+#store-card:hover {
+    border: 2px black solid;
 }
